tests/characterization/snapshots/characterization__manager_versions__current_release.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 0
--- stdout ---
manager:
  v3.3.3 (installed, not in remote tags)
  v2.0.0
* v1.10.0 (installed)
  v1.2.3 (installed)
  vfoo (installed, not in remote tags)
--- stderr ---
--- end ---
